Ship link word-wrap fix

--- a/scss/breakpoints/_base.scss
+++ b/scss/breakpoints/_base.scss
@@ -184,6 +184,7 @@ main {
 	a {
 		color: $color-highlight;
 		text-decoration: none;
+		word-wrap: break-word;
 	}
 	
 	p {
